// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraftModeCallout Custom content case renders a callout with custom content when custom props are present 1`] = `
<div
  class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
  data-test-subj="customDraftModeCallOut"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="warning"
    />
    You have unsaved changes
  </p>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-default"
  >
    <p
      class="euiText emotion-euiText-s"
    >
      Custom message
    </p>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
    role="status"
  />
</div>
`;

exports[`DraftModeCallout Default case renders a default callout when custom props are not present 1`] = `
<div
  class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
  data-test-subj="unsavedChangesDraftModeCallOut"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="warning"
    />
    You have unsaved changes
  </p>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-default"
  >
    <p
      class="euiText emotion-euiText-s"
    >
      This link might not be permanent. Save your changes to ensure it works as expected.
    </p>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
    role="status"
  />
</div>
`;
